--- a/Ilevus/Messages.resx
+++ b/Ilevus/Messages.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="AuthInvalidUserCredentials" xml:space="preserve">
+    <value>E-mail e/ou senha inválido(s).</value>
+  </data>
   <data name="LabelEmail" xml:space="preserve">
     <value>E-mail</value>
   </data>
